# os1

./: .gitignore  .gitmodules  Makefile  README  README.md  common.mak  i686-unknown-elf.json
kernel/: Cargo.toml  Makefile  Xargo.toml  bare_bones.rs  core.rs  debug.rs  gdt.rs  heap.rs  i686-unknown-elf.json  kernel.rs  lib.rs  linked_list.rs  machine.S  machine.rs  mbr.S  morestack.S  rust_alloc.rs  rusty.rs  start.S  static_linked_list.rs  string.rs  vec.rs  vga.rs  window.rs
kernel/concurrency/: barrier.rs  mod.rs  semaphore.rs
kernel/data_structures/: lazy_global.rs  linked_list.rs  mod.rs  proc_queue.rs  queue.rs
kernel/data_structures/concurrency/: atomic32.rs  mod.rs  semaphore.rs
kernel/fs/: error.rs  mod.rs  ofs.rs  traits.rs
kernel/fs/ofs/: file.rs  fs.rs  hw.rs  internals.rs  mod.rs  structs.rs
kernel/interrupts/: idt.rs  mod.rs  pic.rs  pit.rs  process.rs  tss.rs
kernel/io/: block.rs  ide.rs  kbd.rs  mod.rs  nbb.rs  stream.rs
kernel/ipc/: mod.rs
kernel/memory/: heap.rs  mod.rs  physmem.rs  regionmap.rs  rust_alloc.rs  tss.rs  virtmem.rs  vm.rs
kernel/memory/vm/: addr_space.rs  mod.rs  physmem.rs  process.rs  structs.rs
kernel/process/: context.rs  current.rs  elf.rs  focus.rs  idle.rs  init.rs  load.rs  mod.rs  proc_table.rs  ready_queue.rs  reaper.rs  syscall.rs  user.rs
kernel/sync/: barrier.rs  event.rs  mod.rs  semaphore.rs
kernel/vga/: input.rs  mod.rs  rectangle.rs  vga.rs  window.rs
lib/: Makefile  alloc_system.rs
mkfs/: .gitignore  Makefile  image.rs  mkfs.rs
user/: .gitignore  Makefile  crt0.S  lib.rs  sys.S  sys.h  (+1 more)
(+2 files in other folders)
